[gd_scene load_steps=33 format=3 uid="uid://cy8ide76c10pt"]

[ext_resource type="Script" uid="uid://cqnivxi2uby0x" path="res://script/level_selection_ui_first_layer1.gd" id="1_v3ptc"]
[ext_resource type="Texture2D" uid="uid://dt3ork5msi2ow" path="res://assets/Button/1.png" id="2_xuhyn"]
[ext_resource type="Texture2D" uid="uid://xi2gd2bknh4d" path="res://assets/Button/2.png" id="3_632y5"]
[ext_resource type="Texture2D" uid="uid://0edoqvylmfnh" path="res://assets/Button/3.png" id="4_kjaqj"]
[ext_resource type="Texture2D" uid="uid://dqf57k57albxe" path="res://assets/Button/4.png" id="5_gmsia"]
[ext_resource type="Texture2D" uid="uid://b68nmhvex7bbs" path="res://assets/Button/5.png" id="6_rcpnm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rcpnm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xnufr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_632y5"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_top = 1
border_blend = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kjaqj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gmsia"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t86ei"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tlkqv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jgcec"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_top = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a8o7j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ihlgk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4xn3g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jgcec"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8o7j"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_top = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y1tbk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pyu3e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0lats"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nky8l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_23o3t"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_top = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x1k10"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g2m61"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_swrkl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mkoje"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xuilt"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_top = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h36xs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m7xgd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_73soa"]

[node name="Level_selection_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0087059, 1.0630984)
script = ExtResource("1_v3ptc")

[node name="Lvl1" type="Button" parent="."]
custom_minimum_size = Vector2(60, 120)
layout_mode = 0
offset_left = 77.326805
offset_top = 252.09329
offset_right = 197.32681
offset_bottom = 372.0933
scale = Vector2(1, 1.003011)
theme_override_icons/icon = ExtResource("2_xuhyn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rcpnm")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_xnufr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_632y5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kjaqj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gmsia")
theme_override_styles/focus = SubResource("StyleBoxEmpty_t86ei")
icon = ExtResource("2_xuhyn")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Lvl2" type="Button" parent="."]
custom_minimum_size = Vector2(120, 120)
layout_mode = 0
offset_left = 383.6599
offset_top = 481.6111
offset_right = 503.6599
offset_bottom = 601.6111
scale = Vector2(1, 1.003011)
theme_override_styles/normal = SubResource("StyleBoxEmpty_tlkqv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jgcec")
theme_override_styles/hover = SubResource("StyleBoxEmpty_a8o7j")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ihlgk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4xn3g")
icon = ExtResource("3_632y5")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Lvl3" type="Button" parent="."]
custom_minimum_size = Vector2(120, 120)
layout_mode = 0
offset_left = 746.5011
offset_top = 570.97253
offset_right = 866.5011
offset_bottom = 690.97253
scale = Vector2(1, 1.003011)
theme_override_styles/normal = SubResource("StyleBoxEmpty_jgcec")
theme_override_styles/pressed = SubResource("StyleBoxFlat_a8o7j")
theme_override_styles/hover = SubResource("StyleBoxEmpty_y1tbk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pyu3e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0lats")
icon = ExtResource("4_kjaqj")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Lvl4" type="Button" parent="."]
custom_minimum_size = Vector2(120, 120)
layout_mode = 0
offset_left = 1047.8773
offset_top = 302.88824
offset_right = 1167.8773
offset_bottom = 422.88824
scale = Vector2(1, 1.003011)
theme_override_styles/normal = SubResource("StyleBoxEmpty_nky8l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_23o3t")
theme_override_styles/hover = SubResource("StyleBoxEmpty_x1k10")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_g2m61")
theme_override_styles/focus = SubResource("StyleBoxEmpty_swrkl")
icon = ExtResource("5_gmsia")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Lvl5" type="Button" parent="."]
custom_minimum_size = Vector2(120, 120)
layout_mode = 0
offset_left = 1374.0378
offset_top = 522.9995
offset_right = 1494.0378
offset_bottom = 642.9995
scale = Vector2(1, 1.003011)
theme_override_styles/normal = SubResource("StyleBoxEmpty_mkoje")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xuilt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_h36xs")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_m7xgd")
theme_override_styles/focus = SubResource("StyleBoxEmpty_73soa")
icon = ExtResource("6_rcpnm")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="Lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="Lvl3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="Lvl4" to="." method="_on_lvl_4_pressed"]
[connection signal="pressed" from="Lvl5" to="." method="_on_lvl_5_pressed"]
